# carmcheats

./: .gitignore  README.md  algorithm.py  c1.potfile  c2.potfile  carm1.py  carm2.py  cheat_retrieval.py  match_codes2.py  sort_database.py  verify_database.py
.github/workflows/: check-potfile.yml
DictionaryGenerator/: CMakeLists.txt  DictionaryGenerator.sln  DictionaryGenerator.vcxproj  README.md  dictionary_generator.py  main.cpp
DictionaryGenerator/data/: articles_prepositions.txt  nouns.old.txt  nouns.txt  sentence_structures.txt  subjects.txt  verbs_regular.txt
carmcheat/: algorithm.py  analyze.py  cheat_retrieval.py  format_robin.py  sort_database.py  verify_database.py
dictionary-generator/: .gitignore  README.md  index.js
dictionary-generator/data/: adjectives.txt  articles_prepositions.test.txt  articles_prepositions.txt  nouns.txt  sentence_structures.test.txt  sentence_structures.txt  subjects.test.txt  subjects.txt  verbs_regular.txt
src/: CMakeLists.txt  carmhash.c  carmhash.h  carmhashcli.c
src/cli/: CMakeLists.txt  carm2cheatpatchercli.c  carmhashcli.c
src/common/: CMakeLists.txt  carm2cheatrawdata.c  carm2cheatrawdata.h  carmcheatrawdata.c  carmcheatrawdata.h  carmhash.c  carmhash.h  carmutil.c  carmutil.h
src/gui/: CMakeLists.txt  carm2cheatpatchergui.cpp  carm2cheatpatchergui.h  carm2cheatpatchergui.ui  carmhashgui.cpp  carmhashgui.h  carmhashgui.qrc  carmhashgui.rc  carmhashgui.ui  gui_utils.cpp  gui_utils.h
